# openai-api

./: README.md  pyproject.toml
openai_api/: modify.py  request_cg.py
