[tool.poetry]
name = "openai-api"
version = "0.1.0"
description = ""
authors = ["Hiroo Takizawa <kei.cataract@gmail.com>"]
readme = "README.md"
packages = [{include = "openai_api"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.26.5"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
